Fixed cover date not showing in simples; fixed single pricing layout;

--- a/src/main/webapp/bundles/health/less/results.less
+++ b/src/main/webapp/bundles/health/less/results.less
@@ -364,6 +364,9 @@
               }
 
               .tbaCover {
+                .benefit-container-item-date {
+                  display: none;
+                }
                 .benefit-icon {
                   &::before {
                     color: #313131;
