--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -460,7 +460,7 @@
     margin-bottom: 10px;
     height: 110px;
     @media (@lg-only) {
-      height: initial;
+      height: 180px;
     }
 
     .frequencyAmount {
@@ -930,6 +930,7 @@
           .contentInner {
             .benefit-container {
               margin-top: 10px;
+              height: 21px;
               .benefit-container-item {
                 display: inline;
 
@@ -990,6 +991,9 @@
           .contentInner {
             .benefit-container {
               .tbaCover {
+                .benefit-container-item-date {
+                  display: none;
+                }
               .benefit-icon {
                 &::before {
                   .icon-tba();
